--- a/comicsdb/templates/comicsdb/creator_list.html
+++ b/comicsdb/templates/comicsdb/creator_list.html
@@ -27,7 +27,9 @@
         <form action="{% url 'creator:search' %}" method="get" accept-charset="utf-8">
           <div class="field has-addons">
             <p class="control">
-              <input class="input" name="q" type="search" placeholder="Find a creator">
+                <label>
+                    <input class="input" name="q" type="search" placeholder="Find a creator">
+                </label>
             </p>
             <p class="control">
               <button class="button">Search</button>
@@ -82,7 +84,7 @@
           {% with count=creator.issue_count %}
             {% if count %}
             <a href="{% url 'creator:issue' creator.slug %}" class="card-footer-item">
-              {{ count }} Issue{{ count|pluralize }}
+              {{ count|intcomma }} Issue{{ count|pluralize }}
             </a>
             {% else %}
             <p class="card-footer-item">0 Issues</p>
