--- a/comicsdb/templates/comicsdb/publisher_list.html
+++ b/comicsdb/templates/comicsdb/publisher_list.html
@@ -1,6 +1,7 @@
 {% extends parent_template|default:"base.html" %}
 {% load thumbnail %}
 {% load static %}
+{% load humanize %}
 
 {% block title %}Publishers{% endblock title %}
 
@@ -26,7 +27,9 @@
           <form action="{% url 'publisher:search' %}" method="get" accept-charset="utf-8">
             <div class="field has-addons">
               <p class="control">
-                <input class="input" name="q" type="search" placeholder="Find a publisher">
+                  <label>
+                      <input class="input" name="q" type="search" placeholder="Find a publisher">
+                  </label>
               </p>
               <p class="control">
                 <button class="button">Search</button>
@@ -82,7 +85,7 @@
             {% with count=publisher.series_count %}
               {% if count %}
                 <a href="{% url 'publisher:series' publisher.slug %}" class="card-footer-item">
-                  {{ count }} Series
+                  {{ count|intcomma }} Series
                 </a>
               {% else %}
                 <p class="card-footer-item">0 Series</p>
