--- a/comicsdb/templates/comicsdb/team_list.html
+++ b/comicsdb/templates/comicsdb/team_list.html
@@ -1,6 +1,7 @@
 {% extends parent_template|default:"base.html" %}
 {% load thumbnail %}
 {% load static %}
+{% load humanize %}
 
 {% block title %}Teams{% endblock title %}
 
@@ -26,7 +27,9 @@
         <form action="{% url 'team:search' %}" method="get" accept-charset="utf-8">
           <div class="field has-addons">
             <p class="control">
-              <input class="input" name="q" type="search" placeholder="Find a team">
+                <label>
+                    <input class="input" name="q" type="search" placeholder="Find a team">
+                </label>
             </p>
             <p class="control">
               <button class="button">Search</button>
@@ -81,7 +84,7 @@
           {% with count=team.issue_count %}
             {% if count %}
             <a href="{% url 'team:issue' team.slug %}" class="card-footer-item">
-              {{ count }} issue{{ count|pluralize }}
+              {{ count|intcomma }} issue{{ count|pluralize }}
             </a>
             {% else %}
             <p class="card-footer-item">0 issues</p>
