Initial Imprint forms, views, and urls

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -38,6 +38,10 @@
             <span class="icon"><i class="fas fa-building"></i></span>
             <span>Publishers</span>
           </a>
+          <a class="navbar-item" href="{% url 'imprint:list' %}">
+            <span class="icon"><i class="fas fa-building"></i></span>
+            <span>Imprints</span>
+          </a>
           <a class="navbar-item" href="{% url 'series:list' %}">
             <span class="icon"><i class="fas fa-archive"></i></span>
             <span>Series</span>
