Use stamp icon for Imprint navbar icon

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -39,7 +39,7 @@
             <span>Publishers</span>
           </a>
           <a class="navbar-item" href="{% url 'imprint:list' %}">
-            <span class="icon"><i class="fas fa-building"></i></span>
+            <span class="icon"><i class="fas fa-stamp"></i></span>
             <span>Imprints</span>
           </a>
           <a class="navbar-item" href="{% url 'series:list' %}">
